feat(user): list users (#15)
* working on users profile

* Adding helpers

* Add list user functionalities

* list user functionalities

* Finishes #164139773

* Write more test #164139773

* updating app.json

* Add babel/polyfill

* document with swagger

* finishes #164139783

* refactor mockdata

* removes duplicated test

* updating JSDoc

[Delivers #164139783]
