# server/routes/index.js
@@ -3,6 +3,7 @@ import apiSpec from '../../swagger.json';
 import authRoutes from './auth-routes';
 import userRoutes from './user-routes';
 import recipeRoutes from './recipe-routes';
+import profileRoutes from './profile-routes';
 import { errorResponse } from '../utils/helpers';
 
 const router = app => {
@@ -10,6 +11,7 @@ const router = app => {
   app.use('/api/users', authRoutes);
   app.use('/api/user', userRoutes);
   app.use('/api/recipes', recipeRoutes);
+  app.use('/api/profiles', profileRoutes);
   app.use('*', (req, res) =>
     errorResponse(res, 'The requested resource was not found', 404)
   );
